<resources>
    <!--Strings relacionados con la aplicación como tal-->
    <string name="app_name">Domot 8</string>

    <!--Strings de la pantalla principal-->
    <string name="title_activity_riego">Riego</string>
    <string name="title_activity_climatizacion">Climatización</string>
    <string name="title_activity_ventanas">Ventanas</string>
    <string name="title_activity_iluminacion">Iluminación</string>

    <!--Strings de las zonas-->
    <string name="general">General</string>
    <string name="salon">Salón</string>
    <string name="pasillo">Pasillo</string>
    <string name="cocina">Cocina</string>
    <string name="habitacion">Habitación</string>
    <string name="bano">Baño</string>
    <string name="jardin">Jardín</string>
    <string name="garaje">Garaje</string>
    <string name="zonas">Zonas</string>
    <string name="jLateral">Jardín Lateral</string>
    <string name="jTrasero">Jardín Trasero</string>
    <string name="jLateral2">J.Lateral</string>
    <string name="jTrasero2">J.Trasero</string>


    <!--Strings de los menús-->
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_acercade">Acerca De</string>

    <!--Strings de los menús flotantes-->
    <string name="general_riego_on">Conectar todos los riegos</string>
    <string name="general_riego_off">Desconectar todos los riegos</string>
    <string name="general_climatizacion_on">Activar todos los termostatos</string>
    <string name="general_climatizacion_off">Desactivar todos los termostatos</string>
    <string name="general_ventanas_on">Abrir todas las ventanas</string>
    <string name="general_ventanas_off">Cerrar todas las ventanas</string>
    <string name="general_persianas_on">Subir todas las persianas</string>
    <string name="general_persianas_off">Bajar todas las persianas</string>
    <string name="general_iluminacion_on">Encender todas las luces</string>
    <string name="general_iluminacion_off">Apagar todas las luces</string>

    <!--Strings de la climatización-->
    <string name="temp_obj">Temperatura Deseada</string>
    <string name="temp_act">Temperatura Actual</string>

    <string name="vision_general">Visión General</string>
    <string name="temperatura">Temperatura</string>
    <string name="fahrenheit">ºF</string>
    <string name="disposicion">Disposición</string>
    <string name="righttoleft">RTL</string>
    <string name="idioma">Idioma</string>
    <string name="ingles">Inglés</string>
    <string name="mododaltonico">Modo Daltónico</string>
    <string name="si">Sí</string>
    <string name="tamanoletra">Tamaño Letra</string>
    <string name="grande">Grande</string>
    <string name="media">Media</string>
    <string name="pequena">Pequeña</string>
    <string name="queesrtl">RTL, dirección de texto de derecha a izquierda</string>

</resources>
