<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grupo8.altafidelidadipo.Zonas">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zonas"
        android:textSize="30sp"
        android:id="@+id/tvZonas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollZonas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvZonas">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:id="@+id/btGeneral"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pasillo"
                android:id="@+id/btPasillo"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salon"
                android:id="@+id/btSalon"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cocina"
                android:id="@+id/btCocina"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habitacion"
                android:id="@+id/btHabitacion"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baño"
                android:id="@+id/btBaño"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jardin"
                android:id="@+id/btJardin"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
